// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A user is authenticated should render Header correctly 1`] = `
<header
  className="header"
>
  <div
    className="content-container"
  >
    <div
      className="header__content"
    >
      <Link
        href="/"
        prefetch={true}
      >
        <a
          className="header__title"
        >
          <h1>
            Stravell
          </h1>
        </a>
      </Link>
      <div
        className="header__right"
      >
        <div
          className="header__right"
        >
          <Link
            as="/dashboard/sofiane/undefined"
            href="/dashboard?uid=undefined"
            prefetch={true}
          >
            <withAvatarConfig
              className="header__user-photo show-for-desktop"
              round={true}
              size="40"
              src="myPhotoURL"
            />
          </Link>
          <DropDownMenu
            title="Sofiane"
          >
            <Link
              as="/p/create"
              href="/createPost"
              prefetch={true}
            >
              <button
                id="createButton"
              >
                <IoMdCreate
                  className="header__dropdown-menu-icon"
                />
                 Create Post
              </button>
            </Link>
            <Link
              as="/dashboard/sofiane/undefined"
              href="/dashboard?uid=undefined"
              prefetch={true}
            >
              <button
                id="dashboardButton"
              >
                <IoIosHome
                  className="header__dropdown-menu-icon"
                />
                 
                Dashboard
              </button>
            </Link>
            <button
              id="logOutButton"
              onClick={[MockFunction]}
            >
              <IoIosPower
                className="header__dropdown-menu-icon"
              />
               Log Out
            </button>
          </DropDownMenu>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`There is no user authenticated should render Header correctly 1`] = `
<header
  className="header"
>
  <div
    className="content-container"
  >
    <div
      className="header__content"
    >
      <Link
        href="/"
        prefetch={true}
      >
        <a
          className="header__title"
        >
          <h1>
            Stravell
          </h1>
        </a>
      </Link>
      <div
        className="header__right"
      >
        <Link
          href="/login"
          prefetch={true}
        >
          <a
            className="button button--link"
          >
            Log in
          </a>
        </Link>
      </div>
    </div>
  </div>
</header>
`;
